# go-libedit

./: .gitignore  bazel-bin  bazel-go-libedit  bazel-out  bazel-testlogs
common/: BUILD.bazel
other/: BUILD.bazel
test/: BUILD.bazel
unix/: BUILD.bazel
unix/src/: doc.go
unix/src/c-libedit/: doc.go
unix/src/c-libedit/editline/: doc.go
unix/src/c-libedit/linux-build/: doc.go
